Fixed layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,11 @@
 }
 
 #post-content img {
-  max-width: 800px;
-  width: 100%;
+  max-width: 800px !important;
+}
+
+@media (max-width: 767px) {
+  #post-content img {
+    width: 100% !important;
+  }
 }
